--- a/requirements.txt
+++ b/requirements.txt
@@ -21,3 +21,7 @@ flake8==6.0.0
 black==23.7.0
 isort==5.12.0
 pre-commit==3.3.3
+
+# Development Tools
+django-debug-toolbar==4.1.0
+django-extensions==3.2.3
